openshift/deployment/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: platsrv-registry-web
    deployment:  platsrv-registry-web
  name:  platsrv-registry-web
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app:  platsrv-registry
      role: frontend
      deployment:  platsrv-registry-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app:  platsrv-registry
        deployment:  platsrv-registry-web
        role: frontend
      name:  platsrv-registry-web
    spec:
      containers:
        - name:  platsrv-registry-web
          image:  platsrv-registry-web-main-build
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 2015
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 200m
              memory: 92Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /opt/app-root/etc/Caddyfile
              name: config-vol
              subPath: Caddyfile
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: registry-web-config
          name: config-vol
