openshift/deployment/base/route.web.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: photo-sharing
  name: platsrv-registry-web
spec:
  host: new-registry.developer.gov.bc.ca
  port:
    targetPort: 2015-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: platsrv-registry-web
    weight: 100
  wildcardPolicy: None
